fix for bug #394527:  livemark feed URIs should show up as "bookmarked" (gold star on) in the url bar and in url bar autocomplete search results for performance: when searching previous autocomplete results, we don't need to regenerate the hash tables (of livemark item ids and livemark feed URIs). when searching previous autocomplete results, if we find any, tell the front end immediately, instead of waiting for our first db query to return. r=dietrich, a=mconnor for m8